package com.example.oulearning.training.application.port.in.usecase;

import com.example.oulearning.training.application.port.in.model.TrainingDetailedViewDto;
import com.example.oulearning.training.domain.model.TrainingId;

public interface GetTrainingDetailsUseCase {
    TrainingDetailedViewDto execute(TrainingId id);
}
