package com.example.oulearning.training.application.port.in.usecase;

import com.example.oulearning.training.application.port.in.command.UpdateTrainingReviewCommand;
import com.example.oulearning.training.domain.model.Training;

public interface UpdateTrainingReviewUseCase {
    Training execute(UpdateTrainingReviewCommand command);
}
