@startuml application_training
skinparam classAttributeIconSize 0
hide empty members
skinparam shadowing false
skinparam roundcorner 6
skinparam packageStyle rectangle
skinparam nodesep 20
skinparam ranksep 25

title Training Application Model

package training.application {
  interface GetAreaTrainingsUseCase << (I, #00FF77) >> {
    + AreaTrainingsOverviewDto execute(OrganizationalUnitId organizationalUnitId)
  }
  interface GetTrainingDetailsUseCase << (I, #00FF77) >> {
    + TrainingDetailedViewDto execute(TrainingId id)
  }
  interface RequestNewTrainingUseCase << (I, #00FF77) >> {
    + Training execute(RequestNewTrainingCommand command)
  }
  interface ListTrainingRequestsUseCase << (I, #00FF77) >> {
    + PaginatedTrainingRequestsResult execute(ListTrainingRequestsQuery query)
  }
  interface UpdateTrainingReviewUseCase << (I, #00FF77) >> {
    + Training execute(UpdateTrainingReviewCommand command)
  }
  interface GetTrainingUseCase << (I, #00FF77) >> {
    + Training execute(TrainingId id)
  }

  class RequestNewTrainingCommand << (R, #FF7700) record >>
  class ListTrainingRequestsQuery << (R, #FF7700) record >>
  class UpdateTrainingReviewCommand << (R, #FF7700) record >>
  class AreaTrainingsOverviewDto << (R, #FF7700) record >>
  class TrainingDetailedViewDto << (R, #FF7700) record >>
  class PaginatedTrainingRequestsResult << (R, #FF7700) record >>

  class GetAreaTrainingsService
  class GetTrainingDetailsService
  class RequestNewTrainingService
  class ListTrainingRequestsService
  class UpdateTrainingReviewService
  class GetTrainingService

  class TrainingNotFoundException << (E, #FF5555) >>
}

package training.domain <<Folder>> {
  interface TrainingRepository << (I, #00FF77) >>
  class Training << (R, #FF7700) record >>
  class TrainingId << (R, #FF7700) record >>
}

package budgeting.domain <<Folder>> {
  interface BudgetRepository << (I, #00FF77) >>
}

package organization.application <<Folder>> {
  interface GetEmployeeUseCase << (I, #00FF77) >>
  interface GetOrganizationalUnitUseCase << (I, #00FF77) >>
}

GetAreaTrainingsService ..|> GetAreaTrainingsUseCase
GetTrainingDetailsService ..|> GetTrainingDetailsUseCase
RequestNewTrainingService ..|> RequestNewTrainingUseCase
ListTrainingRequestsService ..|> ListTrainingRequestsUseCase
UpdateTrainingReviewService ..|> UpdateTrainingReviewUseCase
GetTrainingService ..|> GetTrainingUseCase

GetAreaTrainingsService --> TrainingRepository : uses
GetAreaTrainingsService --> BudgetRepository : uses
GetTrainingDetailsService --> TrainingRepository : uses
GetTrainingDetailsService --> GetEmployeeUseCase : uses
RequestNewTrainingService --> TrainingRepository : uses
RequestNewTrainingService --> GetOrganizationalUnitUseCase : uses
ListTrainingRequestsService --> TrainingRepository : uses
UpdateTrainingReviewService --> TrainingRepository : uses
GetTrainingService --> TrainingRepository : uses

@enduml
